# expertino-rcll

./: .cmakelint.py  .gitlint  .gitmodules  .license_header  .pre-commit-config.yaml  dependencies.repos
expertino/: CMakeLists.txt  package.xml
expertino/.history/clips/orders/: order-selection_20250301151829.clp  order-selection_20250301152907.clp  order-selection_20250301154047.clp  order-selection_20250301154150.clp  order-selection_20250301160405.clp  order-selection_20250301162139.clp  order-selection_20250301165338.clp  order-selection_20250301170224.clp  order-selection_20250301171629.clp  order-selection_20250301172153.clp  order-selection_20250301175832.clp  order-selection_20250301181141.clp  order-selection_20250301183412.clp  order-selection_20250301184924.clp  (+96 more)
expertino/clips/: action-sim-bindings.clp  actions.jinja.pddl  deffunctions.clp  defglobals.clp  deftemplates.clp  domain.clp  domain.jinja.pddl  domain.pddl  example_domain.pddl  executor-monitor.clp  executor.clp  failure-reactions.clp  feedback.clp  fixed-sequence.clp  goal-commitment.clp  goal-dispatch.clp  goal-evaluation.clp  goal-expansion.clp  goal-formulation.clp  goal-selection.clp  init.clp  problem.pddl  production-strategy.clp  refbox-action.clp  refbox-comm-init.clp  refbox-recv.clp  sim-agent-task.clp  sim-interface.clp  unwatch.clp
expertino/clips/.history/: executor_20250303165640.clp
expertino/clips/action/: action-agenda.clp  action-precond-check.clp  action-selection.clp  plan.clp
expertino/clips/orders/: draft.clp  order-selection (Copy).clp  order-selection-early-tardy.clp  order-selection-proto-2.clp  order-selection-proto.clp  order-selection-proto2.clp  order-selection.clp  orderselection-proto.py  orderselection.py
expertino/clips/pddl/: README.md  action-effect-apply.clp  action-precond-check.clp  clear-goals.clp  create-goal-instance.clp  fluents.clp  get-action-names.clp  get-fluents.clp  get-objects.clp  get-predicates.clp  instances.clp  numeric-fluents.clp  objects.clp  plan.clp  saliences.clp  set-action-filter.clp  set-fluent-filter.clp  set-goals.clp  set-object-filter.clp
expertino/clips/shutdown/: README.md  finalize-ros.clp
expertino/clips/start-tasks/: README.md  init-pddl.clp  start-tasks.clp
expertino/clips/workers/: workers.clp
expertino/launch/: agent.launch.py
expertino/params/: agent_config.yaml  clips_env_manager.yaml  clips_executive.yaml  clips_features_manager.yaml  clips_manager.yaml
expertino/pddl/: README.md  domain.jinja.pddl  domain_base.jinja.pddl  domain_planning_actions.jinja.pddl  example_problem.jinja.pddl  pay_from_bs.jinja.pddl  planning_domain.jinja.pddl  planning_domain_level2.jinja.pddl  problem.jinja.pddl  spawn_and_transport.jinja.pddl  transport-to-slide.jinja.pddl  transport.jinja.pddl
expertino/pddl/sub_actions/: base_transport.jinja.pddl  pay_with_carrier.jinja.pddl  transport.jinja.pddl  transport_to_slide.jinja.pddl
expertino_blocksworld/: CMakeLists.txt  package.xml
expertino_blocksworld/clips/: action-executability.clp  action-execution.clp  init-pddl.clp  init.clp  point-mapping.clp  reset.clp
expertino_blocksworld/clips/pddl/: instances.clp
expertino_blocksworld/expertino_blocksworld/: blocksworld_env.py
expertino_blocksworld/launch/: agent.launch.py
expertino_blocksworld/params/: agent_config.yaml  clips_env_manager.yaml  training-config.yaml
expertino_blocksworld/pddl/: problem.pddl
expertino_cx_features/ros_comm_interfaces/: CMakeLists.txt  features_plugin.xml  package.xml
expertino_msgs/: CMakeLists.txt  package.xml
expertino_msgs/action/: CallPddlPlanner.action  PlanTemporal.action
expertino_msgs/msg/: Action.msg  FluentEffect.msg  Function.msg  FunctionEffect.msg  Object.msg  Predicate.msg  TimedPlanAction.msg
expertino_msgs/srv/: AddFluent.srv  AddFluents.srv  AddPddlInstance.srv  CheckActionPrecondition.srv  ClearGoals.srv  CreateGoalInstance.srv  GetActionEffects.srv  GetActionNames.srv  GetFluents.srv  GetFunctions.srv  GetObjects.srv  GetPredicates.srv  RemoveObjects.srv  SetActionFilter.srv  SetFluentFilter.srv  SetFunctions.srv  SetGoals.srv  SetObjectFilter.srv
pddl_manager/: CMakeLists.txt  README.md  package.xml
pddl_manager/launch/: pddl_manager.launch.py
pddl_manager/src/: managed_problem.py  pddl_manager.py
rcll_map_publisher/: CMakeLists.txt  package.xml
rcll_map_publisher/include/rcll_map_publisher/: rcll_map_publisher.hpp
rcll_map_publisher/src/: main.cpp  rcll_map_publisher.cpp
up_nextflap/: CMakeLists.txt  package.xml
up_nextflap/nextflap/: nextflap.cpp  setup.py
up_nextflap/nextflap/grounder/: groundedTask.cpp  groundedTask.h  grounder.cpp  grounder.h
up_nextflap/nextflap/heuristics/: evaluator.cpp  evaluator.h  hFF.cpp  hFF.h  hLand.cpp  hLand.h  landmarks.cpp  landmarks.h  numericRPG.cpp  numericRPG.h  rpg.cpp  rpg.h  temporalRPG.cpp  temporalRPG.h
up_nextflap/nextflap/parser/: parsedTask.cpp  parsedTask.h  parser.cpp  parser.h  syntaxAnalyzer.cpp  syntaxAnalyzer.h
up_nextflap/nextflap/planner/: intervalCalculations.cpp  intervalCalculations.h  linearizer.cpp  linearizer.h  plan.cpp  plan.h  planBuilder.cpp  planBuilder.h  planComponents.cpp  planComponents.h  planEffects.cpp  planEffects.h  planner.cpp  planner.h  plannerSetting.cpp  plannerSetting.h  printPlan.cpp  printPlan.h  selector.cpp  selector.h  state.cpp  state.h  successors.cpp  successors.h  z3Checker.cpp  z3Checker.h
up_nextflap/nextflap/preprocess/: preprocess.cpp  preprocess.h  preprocessedTask.cpp  preprocessedTask.h
up_nextflap/nextflap/sas/: mutexGraph.cpp  mutexGraph.h  sasTask.cpp  sasTask.h  sasTranslator.cpp  sasTranslator.h
up_nextflap/nextflap/utils/: priorityQueue.h  utils.cpp  utils.h
up_nextflap/up_nextflap/: up_nextflap.py
z3_vendor/: CMakeLists.txt  package.xml
z3_vendor/buildsys/: CMakeLists.txt
z3_vendor/z3-4.12.0-x64-glibc-2.35/include/: z3++.h  z3.h  z3_algebraic.h  z3_api.h  z3_ast_containers.h  z3_fixedpoint.h  z3_fpa.h  z3_macros.h  z3_optimization.h  z3_polynomial.h  z3_rcf.h  z3_spacer.h  z3_v1.h  z3_version.h
(+111 files in other folders)
