<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>expertino_blocksworld</name>
  <version>0.1.0</version>
  <description>TODO</description>

  <maintainer email="frank.pier@rwth-aachen.de">Frank Pier</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch_ros</build_depend>

  <depend>rclcpp</depend>
  <depend>rcll_protobuf_msgs</depend>
  <depend>cx_bringup</depend>
  <depend>pddl_manager</depend>
  <depend>PkgConfig</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
