<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pddl_manager</name>
  <version>0.1.0</version>
  <description>PDDL manager node using the unified planning framework</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>expertino_msgs</exec_depend>
  <exec_depend>up_nextflap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
