<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcll_map_publisher</name>
  <version>0.0.0</version>
  <description>Publishes the machines of the RCLL to the map, including static transforms for each machine side</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <license>GPLv2+ license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rcll_protobuf_cpp</build_depend>
  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Protobuf</depend>
  <depend>ProtobufComm</depend>
  <depend>boost_system</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
